--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ filelock==3.16.1
 Flask==3.1.0
 fonttools==4.55.3
 fsspec==2024.12.0
+gunicorn==23.0.0
 huggingface-hub==0.27.1
 idna==3.10
 itsdangerous==2.2.0
