--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
+astroid==3.3.8
 blinker==1.9.0
+cachelib==0.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
+dill==0.3.9
 filelock==3.16.1
+flake8==7.1.1
 Flask==3.1.0
+Flask-Caching==2.3.0
 fonttools==4.55.3
 fsspec==2024.12.0
 gunicorn==23.0.0
 huggingface-hub==0.27.1
 idna==3.10
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
 joblib==1.4.2
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.0
+mccabe==0.7.0
 mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
@@ -25,6 +32,10 @@ numpy==2.2.1
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
+platformdirs==4.3.6
+pycodestyle==2.12.1
+pyflakes==3.2.0
+pylint==3.3.3
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -37,6 +48,7 @@ six==1.17.0
 sympy==1.13.1
 textblob==0.18.0.post0
 tokenizers==0.21.0
+tomlkit==0.13.2
 torch==2.5.1
 tqdm==4.67.1
 transformers==4.47.1
