--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.7.0
+anyio==4.8.0
 astroid==3.3.8
 blinker==1.9.0
 cachelib==0.9.0
@@ -8,6 +10,7 @@ colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
 dill==0.3.9
+distro==1.9.0
 filelock==3.16.1
 flake8==7.1.1
 Flask==3.1.0
@@ -15,11 +18,15 @@ Flask-Caching==2.3.0
 fonttools==4.55.3
 fsspec==2024.12.0
 gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
 huggingface-hub==0.27.1
 idna==3.10
 isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jiter==0.8.2
 joblib==1.4.2
 kiwisolver==1.4.8
 MarkupSafe==3.0.2
@@ -29,15 +36,19 @@ mpmath==1.3.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.1
+openai==1.59.6
 packaging==24.2
 pandas==2.2.3
 pillow==11.1.0
 platformdirs==4.3.6
 pycodestyle==2.12.1
+pydantic==2.10.5
+pydantic_core==2.27.2
 pyflakes==3.2.0
 pylint==3.3.3
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 regex==2024.11.6
@@ -45,6 +56,7 @@ requests==2.32.3
 safetensors==0.5.0
 setuptools==75.7.0
 six==1.17.0
+sniffio==1.3.1
 sympy==1.13.1
 textblob==0.18.0.post0
 tokenizers==0.21.0
